fix: left container scrollbar gutter (#1225)

--- a/frontend/ui/materialYou/components/sidePage/style.module.scss
+++ b/frontend/ui/materialYou/components/sidePage/style.module.scss
@@ -45,7 +45,7 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            scrollbar-gutter: stable;
+            scrollbar-gutter: auto;
           }
         }
       }
